<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".cadastro">

    <EditText
        android:id="@+id/txt_nome"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#F0F0F0"
        android:ems="10"
        android:hint="@string/cadastro_nome"
        android:inputType="textPersonName"
        android:paddingStart="28dp"
        android:textColor="#000"
        android:textColorHint="#777777"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#F0F0F0"
        android:ems="10"
        android:hint="@string/cadastro_email"
        android:inputType="textEmailAddress"
        android:paddingStart="28dp"
        android:shadowRadius="40"
        android:textColor="#000"
        android:textColorHint="#777777"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nome" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="356dp"
        android:layout_height="73dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="443dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="228dp"
        android:backgroundTint="#673AB7"
        android:fontFamily="sans-serif-black"
        android:text="@string/cadastro_btn"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_senha"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#F0F0F0"
        android:ems="10"
        android:hint="@string/cadastro_senha"
        android:inputType="textPassword"
        android:paddingStart="28dp"
        android:shadowRadius="40"
        android:textColor="#000"
        android:textColorHint="#777777"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_email" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="72dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="653dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="Back"
        android:stateListAnimator="@null"
        android:tint="#FFFFFF"
        app:icon="@drawable/ic_arrow_back"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>